--- a/application/admin/public/theme/default/stylesheets/default.css
+++ b/application/admin/public/theme/default/stylesheets/default.css
@@ -4581,15 +4581,6 @@ html #container, body #container {
   flex: 0;
 }
 /* line 82, _flexbox.scss */
-#panel-content .-koowa-form .main .scrollable {
-  -webkit-flex: 1;
-  -moz-flex: 1;
-  flex: 1;
-  overflow-y: scroll;
-  -webkit-overflow-scrolling: touch;
-  min-height: 100%;
-}
-/* line 88, _flexbox.scss */
 #panel-content .-koowa-form .sidebar {
   display: -webkit-flex;
   display: -moz-flex;
@@ -4602,17 +4593,17 @@ html #container, body #container {
   flex: initial;
 }
 
-/* line 94, _flexbox.scss */
+/* line 88, _flexbox.scss */
 .scrollable {
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
   -webkit-flex: 1;
   -moz-flex: 1;
   flex: 1;
-  min-height: 100%;
+  height: 1px;
 }
 
-/* line 107, _flexbox.scss */
+/* line 101, _flexbox.scss */
 .editor-wrap,
 .editor-container,
 .mceEditor,
@@ -4632,13 +4623,13 @@ table.mceLayout > tbody > tr:nth-of-type(2) td.mceIframeContainer iframe {
   flex: 1;
 }
 
-/* line 112, _flexbox.scss */
+/* line 106, _flexbox.scss */
 table.mceLayout,
 table.mceLayout > tbody > tr:nth-of-type(2) td.mceIframeContainer iframe {
   height: auto !important;
 }
 
-/* line 116, _flexbox.scss */
+/* line 110, _flexbox.scss */
 .CodeMirror {
   display: -webkit-flex;
   display: -moz-flex;
@@ -4650,7 +4641,7 @@ table.mceLayout > tbody > tr:nth-of-type(2) td.mceIframeContainer iframe {
   -moz-flex: 1;
   flex: 1;
 }
-/* line 119, _flexbox.scss */
+/* line 113, _flexbox.scss */
 .CodeMirror .CodeMirror-scroll {
   -webkit-flex: 1;
   -moz-flex: 1;
@@ -4658,7 +4649,7 @@ table.mceLayout > tbody > tr:nth-of-type(2) td.mceIframeContainer iframe {
 }
 
 /* @group Scope Bar */
-/* line 125, _flexbox.scss */
+/* line 119, _flexbox.scss */
 .scopebar {
   display: -webkit-flex;
   display: -moz-flex;
@@ -4670,7 +4661,7 @@ table.mceLayout > tbody > tr:nth-of-type(2) td.mceIframeContainer iframe {
   -moz-flex: 0;
   flex: 0;
 }
-/* line 128, _flexbox.scss */
+/* line 122, _flexbox.scss */
 .scopebar .scopebar-search {
   display: -webkit-flex;
   display: -moz-flex;
@@ -4683,7 +4674,7 @@ table.mceLayout > tbody > tr:nth-of-type(2) td.mceIframeContainer iframe {
   flex: 1;
   -webkit-justify-content: flex-end;
 }
-/* line 132, _flexbox.scss */
+/* line 126, _flexbox.scss */
 .scopebar .scopebar-search input {
   display: -webkit-flex;
   display: -moz-flex;
@@ -4696,7 +4687,7 @@ table.mceLayout > tbody > tr:nth-of-type(2) td.mceIframeContainer iframe {
   flex: 1;
 }
 
-/* line 140, _flexbox.scss */
+/* line 134, _flexbox.scss */
 .com_pages #components,
 .com_pages #layouts {
   display: -webkit-flex;
@@ -4710,7 +4701,7 @@ table.mceLayout > tbody > tr:nth-of-type(2) td.mceIframeContainer iframe {
   flex: none;
 }
 
-/* line 145, _flexbox.scss */
+/* line 139, _flexbox.scss */
 .com_dashboard #panel-content {
   display: -webkit-flex;
   display: -moz-flex;
@@ -4722,7 +4713,7 @@ table.mceLayout > tbody > tr:nth-of-type(2) td.mceIframeContainer iframe {
   -moz-flex: 1;
   flex: 1;
 }
-/* line 148, _flexbox.scss */
+/* line 142, _flexbox.scss */
 .com_dashboard #panel-content > div:first-child {
   display: -webkit-flex;
   display: -moz-flex;
@@ -4734,7 +4725,7 @@ table.mceLayout > tbody > tr:nth-of-type(2) td.mceIframeContainer iframe {
   -moz-flex: 1;
   flex: 1;
 }
-/* line 151, _flexbox.scss */
+/* line 145, _flexbox.scss */
 .com_dashboard #panel-content > div:first-child > div {
   display: -webkit-flex;
   display: -moz-flex;
@@ -4746,7 +4737,7 @@ table.mceLayout > tbody > tr:nth-of-type(2) td.mceIframeContainer iframe {
   -moz-flex: 1;
   flex: 1;
 }
-/* line 154, _flexbox.scss */
+/* line 148, _flexbox.scss */
 .com_dashboard #panel-content > div:first-child > div #activities-list {
   display: -webkit-flex;
   display: -moz-flex;
@@ -4758,7 +4749,7 @@ table.mceLayout > tbody > tr:nth-of-type(2) td.mceIframeContainer iframe {
   -moz-flex: 1;
   flex: 1;
 }
-/* line 157, _flexbox.scss */
+/* line 151, _flexbox.scss */
 .com_dashboard #panel-content > div:first-child > div #activities-list .activities {
   -webkit-flex: 1;
   -moz-flex: 1;
@@ -4767,14 +4758,14 @@ table.mceLayout > tbody > tr:nth-of-type(2) td.mceIframeContainer iframe {
   -webkit-overflow-scrolling: touch;
   min-height: 100%;
 }
-/* line 162, _flexbox.scss */
+/* line 156, _flexbox.scss */
 .com_dashboard #panel-content > div:first-child > div #activities-list .activities * {
   -webkit-flex: none;
   -moz-flex: none;
   flex: none;
 }
 
-/* line 172, _flexbox.scss */
+/* line 166, _flexbox.scss */
 .com_files #files-app {
   display: -webkit-flex;
   display: -moz-flex;
@@ -4786,7 +4777,7 @@ table.mceLayout > tbody > tr:nth-of-type(2) td.mceIframeContainer iframe {
   -moz-flex: 1;
   flex: 1;
 }
-/* line 175, _flexbox.scss */
+/* line 169, _flexbox.scss */
 .com_files #files-app #files-canvas {
   display: -webkit-flex;
   display: -moz-flex;
@@ -4798,7 +4789,7 @@ table.mceLayout > tbody > tr:nth-of-type(2) td.mceIframeContainer iframe {
   -moz-flex: 1;
   flex: 1;
 }
-/* line 177, _flexbox.scss */
+/* line 171, _flexbox.scss */
 .com_files #files-app #files-canvas #files-grid {
   -webkit-flex: 1;
   -moz-flex: 1;
@@ -4807,11 +4798,11 @@ table.mceLayout > tbody > tr:nth-of-type(2) td.mceIframeContainer iframe {
   -webkit-overflow-scrolling: touch;
   min-height: 100%;
 }
-/* line 185, _flexbox.scss */
+/* line 179, _flexbox.scss */
 .com_files #files-paginator {
   height: 26px;
 }
-/* line 189, _flexbox.scss */
+/* line 183, _flexbox.scss */
 .com_files #files-tree {
   -webkit-flex: 1;
   -moz-flex: 1;
